Fix rendering of feedback on smaller screens

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -498,7 +498,7 @@ a.mastodon-comment__date {
     .page__footer {
         padding: 10px;
     }
-    .comments, .incoming, .webmention-widget, .mastodon-comments {
+    .feedback {
         max-width: 100%;
     }
 }
